--- a/frontend/aluno/aluno.html
+++ b/frontend/aluno/aluno.html
@@ -137,7 +137,7 @@
             <div class="valor destaque" id="mediaGeral"></div>
             </div>
             <div class="card">
-            <h3>Melhor Curso</h3>
+            <h3>Melhor Matéria</h3>
             <div class="valor" id="melhorCurso"></div>
             </div>
             <div class="card">
