adicionando scroll para siderbar

--- a/frontend/admin/admin.html
+++ b/frontend/admin/admin.html
@@ -34,6 +34,8 @@
             <li data-section="cursos"> <i class='bx  bx-list-plus'  ></i>  Cursos</li>
             <li data-section="turmas-cursos"> <i class='bx  bx-group'  ></i>   Turmas</li>
             <li data-section="notificacao"> <i class='bx  bx-bell'  ></i>   Notificações</li>
+            <li data-section="professores"> <i class='bx  bx-clipboard'  ></i>   Professores</li>
+
             <br>
             <a href="../index.html" class="return-btn" title="Voltar para o início">
               <i class='bx bx-undo'></i>
