implementando leitura de professores para adm

--- a/frontend/admin/admin.html
+++ b/frontend/admin/admin.html
@@ -307,6 +307,29 @@
 
         </section>
 
+        <section id="professores" >
+          <div class="professores-wrapper">
+
+            <!-- TOPO -->
+            <div class="professores-top">
+              <div class="professores-header">
+                <h2>
+                  <i class='bx bx-clipboard'></i> Gerenciamento de Professores
+                </h2>
+                <p>Visualize todos os professores cadastrados na plataforma.</p>
+              </div>
+            </div>
+
+            <!-- LISTA -->
+            <div class="professores-lista">
+              <div class="professores-grid" id="professoresGrid">
+                <!-- Cards serão inseridos aqui -->
+              </div>
+            </div>
+
+          </div>
+        </section>
+
 
 
 
