--- a/frontend/admin/admin.html
+++ b/frontend/admin/admin.html
@@ -37,7 +37,7 @@
             <li data-section="professores"> <i class='bx  bx-clipboard'  ></i>   Professores</li>
 
             <br>
-            <a href="../index.html" class="return-btn" title="Voltar para o início">
+            <a href="../login/index.html" class="return-btn" title="Voltar para o início">
               <i class='bx bx-undo'></i>
           </a>
           </ul>
