--- a/frontend/aluno/aluno.html
+++ b/frontend/aluno/aluno.html
@@ -36,7 +36,7 @@
           <li data-section="relatorio"><i class='bx  bx-network-chart'  ></i>  Relatório</li>
           <br>
           <div> 
-           <a href="../index.html" class="return-btn" title="Voltar para o início">
+           <a href="../login/index.html" class="return-btn" title="Voltar para o início">
               <i class='bx bx-undo'> </i>
           </a>          
         </ul>
