--- a/frontend/professor/professor.html
+++ b/frontend/professor/professor.html
@@ -34,7 +34,7 @@
           <li data-section="chamada"><i class="bx bx-check-square"></i>  Chamada</li>
           <li data-section="conteudo"><i class='bx  bx-book-content'></i> Conteúdo</li>
           <br>
-          <a href="../index.html" class="return-btn" title="Voltar para o início">
+          <a href="../login/index.html" class="return-btn" title="Voltar para o início">
               <i class='bx bx-undo'></i>
           </a>
           
